MDEV-10382 Using systemd, mariadb doesn't restart on crashes

when crashing on a signal, don't exit(), but re-signal it, so that
the caller could check WIFSIGNALED()