sql/signal_handler.cc
@@ -75,7 +75,7 @@ extern "C" sig_handler handle_fatal_signal(int sig)
   if (segfaulted)
   {
     my_safe_printf_stderr("Fatal " SIGNAL_FMT " while backtracing\n", sig);
-    _exit(1); /* Quit without running destructors */
+    goto end;
   }
 
   segfaulted = 1;
@@ -301,9 +301,11 @@ end:
 #ifndef __WIN__
   /*
      Quit, without running destructors (etc.)
+     Use a signal, because the parent (systemd) can check that with WIFSIGNALED
      On Windows, do not terminate, but pass control to exception filter.
   */
-  _exit(1);  // Using _exit(), since exit() is not async signal safe
+  signal(sig, SIG_DFL);
+  kill(getpid(), sig);
 #else
   return;
 #endif
